# MemorialMaker

./: .gitignore  README.md  package.json  vite.config.ts
locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pl.yml  pt-BR.yml  ru.yml  tr.yml  vi.yml  zh-CN.yml
src/: App.vue  auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/interfaces/: IContactPerson.rs  IEmailAddress.rs  IMemorializedPerson.rs  IName.rs  IServiceAgendaItem.rs  appState.rs
src-tauri/src/state-reducers/: change-service-prefs.rs
src-tauri/src/structs/: IAppPreferences.rs  IAppWidePreferences.rs  IAudio.rs  ICharity.rs  IContactPerson.rs  IContentItem.rs  IEmailAddress.rs  ILivestreamCredentials.rs  ILivestreamInfo.rs  ILocation.rs  ILovingMemoryApplicationState.rs  IMemorializedPerson.rs  IName.rs  INation.rs  IPhoto.rs  IService.rs  IServiceAgendaItem.rs  IServicePreferences.rs  ISong.rs  ITimeZone.rs  IVideo.rs  UContentItem.rs  UNamePrefix.rs  UNameSuffix.rs  UServiceType.rs  mod.rs
src/components/: Charity.vue  CharityButton.vue  CompositionContainer.vue  CopyButton.vue  Footer.vue  ListItem.vue  Livestream.vue  LivestreamCredentials.vue  Nav.vue  README.md  Service.vue  ServiceAgendaItem.vue  ServiceProgramme.vue
src/layouts/: alpha.vue  beta.vue  default.vue  input.vue  output.vue
src/logic/constants/: defaultStateObject.ts  index.ts  nations.ts  settings.ts  timezones.ts
src/logic/functions/: checkBooleanLogic.ts  (+8 more)
src/modules/: i18n.ts  pwa.ts
src/pages/: about.md  form.vue  index.vue  input.vue  output.vue  preview.vue
src/stores/: appState.ts
(+29 files in other folders)
