[package]
name = "memorial-maker"
version = "0.1.0"
description = "A Memorial website builder"
authors = ["you"]
license = ""
repository = ""
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-text-file", "fs-write-file"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
