[package]
name = "memorial-maker"
version = "0.1.0"
description = "A Memorial website builder"
authors = ["Coderior, VirtualEstatePlanner"]
license = ""
repository = ""
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
chrono = "0.4.19"
date_time = "2.2.0"
image = "0.23.14"
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-text-file", "fs-write-file"] }
humantime = "2.1.0"
uuid = "0.8.2"
url = "2.2.2"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
proc-macro = []
proc-macro-derive = []
proc-macro-lib = []
